Pandas library doesn't work - 403

--- a/Data_API.ipynb
+++ b/Data_API.ipynb
@@ -284,6 +284,27 @@
     "        df.loc[lenght] = row_data\n",
     "    df.to_csv(\"Symbols.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e3ef3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This metode doesn't, 403 error\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read all HTML tables from the Wikipedia page\n",
+    "tables = pd.read_html('https://en.wikipedia.org/wiki/List_of_S%26P_500_companies')\n",
+    "\n",
+    "# The first table usually contains the S&P 500 company list\n",
+    "sp500_table = tables[0]\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(sp500_table.head())"
+   ]
   }
  ],
  "metadata": {
