Add Return and Risk

--- a/List_of_Stoks.ipynb
+++ b/List_of_Stoks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "59f67a87",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "[503 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1b43cd5e",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "4376feb7",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,8 @@
      "output_type": "stream",
      "text": [
       "Pleas enter the symboles of stoks that you want to be under consideration.\n",
-      "\n"
+      "\n",
+      "APPL isn't a valid symbol! Try again.\n"
      ]
     }
    ],
@@ -275,12 +276,12 @@
     "        if counter == 5:\n",
     "            print(f\"First check your symbols! See you.\")\n",
     "            break          \n",
-    "#print(List_stocks)\n"
+    "print(List_stocks)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7f85f8f6",
    "metadata": {},
    "outputs": [
@@ -288,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'GOOGL'}\n"
+      "{'NVDA', 'GOOGL', 'MSFT'}\n"
      ]
     }
    ],
