add start/end date

--- a/List_of_Stoks.ipynb
+++ b/List_of_Stoks.ipynb
@@ -298,6 +298,207 @@
     "print(List_stocks)\n",
     "List_stocks = {'AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM'}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a388c926",
+   "metadata": {},
+   "source": [
+    "# Start date  / End date / Interval "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a94e059",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest valid date for MSFT is 1986-03-13 00:00:00-05:00\n",
+      "The lowest valid date for NVDA is 1999-01-22 00:00:00-05:00\n",
+      "The lowest valid date for GOOGL is 2004-08-19 00:00:00-04:00\n",
+      "The lowest valid date for AAPL is 1980-12-12 00:00:00-05:00\n",
+      "The lowest valid date for IBM is 1962-01-02 00:00:00-05:00\n",
+      "[1962, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_date = []\n",
+    "for ticker in tickers:\n",
+    "    ticker_temp = yf.Ticker(ticker)\n",
+    "    hist = ticker_temp.history(period=\"max\")\n",
+    "    print(f\"The lowest valid date for {ticker} is {hist.index.min()}\")\n",
+    "    hist = str(hist.index.min())\n",
+    "    hist = str(hist[:9])\n",
+    "    min_date.append([int(hist[0:4]),int(hist[5:7]),int(hist[8:])])\n",
+    "print(min(min_date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2ff4843a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note that Format of date is YYYY-MM-DD!, like 2025-10-26\n",
+      "Given the Start data of each stock enter a valid start data!\n",
+      "Given your ticker(s) list the minimum valid date is 2004-8-1.\n",
+      "[2004, 8, 1]\n",
+      "[2025, 10, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "import yfinance as yf \n",
+    "\n",
+    "today = str(date.today())\n",
+    "print(f\"Note that Format of date is YYYY-MM-DD!, like {today}\")\n",
+    "temp = []\n",
+    "temp.append(int(today[0:4])) \n",
+    "temp.append(int(today[5:7]))\n",
+    "temp.append(int(today[8:]))\n",
+    "today = temp[:]\n",
+    "\n",
+    "print(\"Given the Start data of each stock enter a valid start data!\")\n",
+    "tickers = {'AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM'}\n",
+    "\n",
+    "min_dates = []\n",
+    "for ticker in tickers:\n",
+    "    ticker_temp = yf.Ticker(ticker)\n",
+    "    hist = ticker_temp.history(period=\"max\")\n",
+    "    #print(f\"The lowest valid date for {ticker} is {hist.index.min()}\")\n",
+    "    hist = str(hist.index.min())\n",
+    "    hist = str(hist[:9])\n",
+    "    min_dates.append([int(hist[0:4]),int(hist[5:7]),int(hist[8:])])\n",
+    "\n",
+    "max_date = max(min_date)\n",
+    "print(f\"Given your ticker(s) list the minimum valid date is {max_date[0]}-{max_date[1]}-{max_date[2]}.\")\n",
+    "\n",
+    "def data_format_validation(date):\n",
+    "    \n",
+    "    for i in range(len(date)):\n",
+    "        if i in [4, 7]:\n",
+    "            if date[i] != \"-\":\n",
+    "                return False\n",
+    "        else:\n",
+    "            try:\n",
+    "                int(date[i])\n",
+    "            except:\n",
+    "                return False\n",
+    "    if int(date[8]+date[9]) > 31 or int(date[5]+date[6]) not in range(0,13):\n",
+    "        return False\n",
+    "        \n",
+    "    return True\n",
+    "#1m - 7days, 2m, 5m, 15m, 30m, 60m, 90m - 60 days, 1d(defult), 5d, 1wk, 1mo, 3mo -full history\n",
+    "\n",
+    "\n",
+    "S_date = str(input(f\"Enter Start Date:\"))\n",
+    "\n",
+    "if data_format_validation(S_date):\n",
+    "    temp = []\n",
+    "    temp.append([int(S_date[0:4]),int(S_date[5:7]),int(S_date[8:])])\n",
+    "    S_date = temp[0][:]\n",
+    "    print(S_date)\n",
+    "    if S_date[0] < max_date[0] or S_date[1]<max_date[1] or S_date[2]<max_date[2] :\n",
+    "        print(f\" Entered data is not in valid range. Start data must be grater than equal {max_date[0]}-{max_date[1]}-{max_date[2]}\")\n",
+    "else:\n",
+    "    print('Entered data is not in accepteable format!')    \n",
+    "    \n",
+    "E_date = str(input(f\"Enter End Date:\"))  \n",
+    "\n",
+    "if data_format_validation(E_date):\n",
+    "    temp = []\n",
+    "    temp.append([int(E_date[0:4]),int(E_date[5:7]),int(E_date[8:])])\n",
+    "    E_date = temp[0][:]\n",
+    "    print(E_date)\n",
+    "    if E_date[0] < today[0] or E_date[1]<today[1] or E_date[2]<today[2] :\n",
+    "        print(f\" Entered data is not in valid range. Start data must be less than equal {today[0]}-{today[1]}-{today[2]}\")\n",
+    "else:\n",
+    "    print('Entered data is not in accepteable format!')  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d363cf7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date, datetime\n",
+    "import yfinance as yf\n",
+    "import re\n",
+    "\n",
+    "# --- Helper Functions ---\n",
+    "\n",
+    "def valid_date_format(d):\n",
+    "    \"\"\"Check date format YYYY-MM-DD using regex.\"\"\"\n",
+    "    return bool(re.fullmatch(r\"\\d{4}-\\d{2}-\\d{2}\", d))\n",
+    "\n",
+    "def parse_date(d):\n",
+    "    \"\"\"Convert string date to datetime object.\"\"\"\n",
+    "    return datetime.strptime(d, \"%Y-%m-%d\").date()\n",
+    "\n",
+    "# --- Today’s Date ---\n",
+    "today = date.today()\n",
+    "print(f\"Note: Date format is YYYY-MM-DD (e.g., {today})\")\n",
+    "\n",
+    "# --- Find Earliest Available Dates ---\n",
+    "tickers = ['AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM']\n",
+    "min_dates = []\n",
+    "\n",
+    "for t in tickers:\n",
+    "    ticker_data = yf.Ticker(t).history(period=\"max\")\n",
+    "    earliest = ticker_data.index.min().date()\n",
+    "    min_dates.append(earliest)\n",
+    "    print(f\"The earliest valid date for {t} is {earliest}\")\n",
+    "\n",
+    "max_date = max(min_dates)\n",
+    "print(f\"\\n👉 The latest of all minimum dates is {max_date}\")\n",
+    "\n",
+    "# --- Get Start Date ---\n",
+    "S_date_input = input(\"\\nEnter Start Date (YYYY-MM-DD): \")\n",
+    "\n",
+    "if valid_date_format(S_date_input):\n",
+    "    S_date = parse_date(S_date_input)\n",
+    "    if S_date < max_date:\n",
+    "        print(f\"❌ Invalid: Start date must be >= {max_date}\")\n",
+    "    else:\n",
+    "        print(f\"✅ Start date accepted: {S_date}\")\n",
+    "else:\n",
+    "    print(\"❌ Invalid format! Please use YYYY-MM-DD\")\n",
+    "\n",
+    "# --- Get End Date ---\n",
+    "E_date_input = input(\"\\nEnter End Date (YYYY-MM-DD): \")\n",
+    "\n",
+    "if valid_date_format(E_date_input):\n",
+    "    E_date = parse_date(E_date_input)\n",
+    "    if E_date > today:\n",
+    "        print(f\"❌ Invalid: End date must be <= {today}\")\n",
+    "    else:\n",
+    "        print(f\"✅ End date accepted: {E_date}\")\n",
+    "else:\n",
+    "    print(\"❌ Invalid format! Please use YYYY-MM-DD\")\n"
+   ]
   }
  ],
  "metadata": {
