--- a/Yfainance.ipynb
+++ b/Yfainance.ipynb
@@ -841,6 +841,51 @@
     "tickers = ['AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM']\n",
     "Risk_Stocks(tickers)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39de6745",
+   "metadata": {},
+   "source": [
+    "Risk on time frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466e8d18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Risk_Stocks (tikers , time_frame , shift_step):\n",
+    "    data = yf.download(tickers, start=\"2025-01-01\", end=\"2025-10-24\" , interval=\"1d\")\n",
+    "    abs_returns_df = {}\n",
+    "    for tiker in tikers:\n",
+    "        Close_prices = list(data[\"Close\"][tiker])\n",
+    "        #print(Close_prices)\n",
+    "\n",
+    "        Open_prices = list(data[\"Open\"][tiker])\n",
+    "        #print(Open_prices)\n",
+    "        abs_return = [(Close_prices[i]-Open_prices[i])/Open_prices[i] for i in range(len(Open_prices)) ]\n",
+    "        abs_returns_df [tiker] =  abs_return \n",
+    "    \n",
+    "    risk_stocks = {}\n",
+    "    for key in abs_returns_df.keys():\n",
+    "        Returns = abs_returns_df[key]\n",
+    "        #print(Returns)\n",
+    "        mean_returns = sum(Returns)/len(Returns)\n",
+    "        Var_returns = (sum([(i-mean_returns)**2 for i in Returns])/len(Returns))**1/2\n",
+    "        #print(Var_returns) \n",
+    "        Annualized_Volatility = Var_returns * 252**1/2\n",
+    "        #Annualized_Volatility\n",
+    "        risk_stocks [key] = {\"Var_returns\" : Var_returns , \"Annualized_Volatility\" : Annualized_Volatility}\n",
+    "    risk_stocks_df = pd.DataFrame(risk_stocks)\n",
+    "        \n",
+    "    return risk_stocks_df\n",
+    "\n",
+    "tickers = ['AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM']\n",
+    "Risk_Stocks(tickers)"
+   ]
   }
  ],
  "metadata": {
