--- a/List_of_Stoks.ipynb
+++ b/List_of_Stoks.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "2ff4843a",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
     "        return False\n",
     "        \n",
     "    return True\n",
-    "#1m - 7days, 2m, 5m, 15m, 30m, 60m, 90m - 60 days, 1d(defult), 5d, 1wk, 1mo, 3mo -full history\n",
+    "\n",
     "\n",
     "\n",
     "S_date = str(input(f\"Enter Start Date:\"))\n",
@@ -428,19 +428,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d363cf7d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: Date format is YYYY-MM-DD (e.g., 2025-10-26)\n",
+      "The earliest valid date for AAPL is 1980-12-12\n",
+      "The earliest valid date for MSFT is 1986-03-13\n",
+      "The earliest valid date for NVDA is 1999-01-22\n",
+      "The earliest valid date for GOOGL is 2004-08-19\n",
+      "The earliest valid date for IBM is 1962-01-02\n",
+      "\n",
+      "👉 The latest of all minimum dates is 2004-08-19\n",
+      "✅ Start date accepted: 2022-10-12\n",
+      "✅ End date accepted: 2025-03-30\n"
+     ]
     }
    ],
    "source": [
@@ -498,6 +504,57 @@
     "        print(f\"✅ End date accepted: {E_date}\")\n",
     "else:\n",
     "    print(\"❌ Invalid format! Please use YYYY-MM-DD\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2981719",
+   "metadata": {},
+   "source": [
+    "# interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677df170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acceptabale intervals are in the following form:\n",
+      "\n",
+      " one minutes (maximum duration must be 7 days!): 1m\n",
+      "\n",
+      " two, five, fifteen, therty, sixty and ninty minutes (maximum duration must be 60 days!): 2m, 5m, ..., 90m\n",
+      "\n",
+      " five day (without any ristriction on duration): 5d \n",
+      "\n",
+      " one weak (without any ristriction on duration): 1wk \n",
+      "\n",
+      " one or three month (without any ristriction on duration): 1mo, 3mo \n",
+      "Entered interval is 5m.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1m - 7days, 2m, 5m, 15m, 30m, 60m, 90m - 60 days, 1d(defult), 5d, 1wk, 1mo, 3mo -full history\n",
+    "intervals = [\"1m\" , \"2m\", \"5m\", \"15m\", \"30m\", \"60m\", \"90m\", \"1d\", \"5d\", \"1wk\", \"1mo\" , \"3mo\"]\n",
+    "print(\"Acceptabale intervals are in the following form:\")\n",
+    "print(\"\\n one minutes (maximum duration must be 7 days!): 1m\")\n",
+    "print(\"\\n two, five, fifteen, therty, sixty and ninty minutes (maximum duration must be 60 days!): 2m, 5m, ..., 90m\")\n",
+    "print(\"\\n five day (without any ristriction on duration): 5d \")\n",
+    "print(\"\\n one weak (without any ristriction on duration): 1wk \")\n",
+    "print(\"\\n one or three month (without any ristriction on duration): 1mo, 3mo \")\n",
+    "\n",
+    "interval = input(\"\\n Enter your suitable onterval:\")\n",
+    "\n",
+    "if not interval in intervals:\n",
+    "    print(\"\\n Entered interval is not acceptable!\")\n",
+    "else:\n",
+    "    print(f\"\\n Entered interval is {interval}.\")"
    ]
   }
  ],
