Super_main: First sketch

--- a/List_of_Stoks.ipynb
+++ b/List_of_Stoks.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "59f67a87",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Projects\\Coding_class_2025-Project\\Symbols_df.py:13: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 13 of the file d:\\Projects\\Coding_class_2025-Project\\Symbols_df.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  soup = BeautifulSoup(page.text, \"html\")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -207,7 +218,7 @@
        "[503 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,21 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f85f8f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'NVDA', 'GOOGL', 'MSFT'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CONSIDER!\n",
-    "print(List_stocks)\n",
+    "#print(List_stocks)\n",
     "List_stocks = {'AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM'}"
    ]
   },
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3a94e059",
    "metadata": {},
    "outputs": [
@@ -317,11 +320,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The lowest valid date for MSFT is 1986-03-13 00:00:00-05:00\n",
-      "The lowest valid date for NVDA is 1999-01-22 00:00:00-05:00\n",
-      "The lowest valid date for GOOGL is 2004-08-19 00:00:00-04:00\n",
-      "The lowest valid date for AAPL is 1980-12-12 00:00:00-05:00\n",
       "The lowest valid date for IBM is 1962-01-02 00:00:00-05:00\n",
+      "The lowest valid date for MSFT is 1986-03-13 00:00:00-05:00\n",
+      "The lowest valid date for AAPL is 1980-12-12 00:00:00-05:00\n",
+      "The lowest valid date for GOOGL is 2004-08-19 00:00:00-04:00\n",
+      "The lowest valid date for NVDA is 1999-01-22 00:00:00-05:00\n",
       "[1962, 1, 0]\n"
      ]
     }
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "2ff4843a",
    "metadata": {},
    "outputs": [
@@ -348,11 +351,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note that Format of date is YYYY-MM-DD!, like 2025-10-27\n",
+      "Note that Format of date is YYYY-MM-DD!, like 2025-10-28\n",
       "Given the Start data of each stock enter a valid start data!\n",
       "Given your ticker(s) list the minimum valid date is 2004-8-1.\n",
-      "[2020, 10, 26]\n",
-      "[2025, 10, 26]\n"
+      "[2004, 8, 1]\n",
+      "[2025, 10, 28]\n"
      ]
     }
    ],
@@ -1288,6 +1291,32 @@
    "source": [
     "data = yf.download(List_stocks, start=S_date, end=E_date , interval=interval)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ecb89493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2004-8-1 2025-10-28\n",
+      "2004-08-08 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(S_date , E_date)\n",
+    "#E_date - S_date\n",
+    "today = pd.Timestamp(S_date)\n",
+    "step = pd.Timedelta(\"7D\")\n",
+    "next_week = today + step\n",
+    "print(next_week) "
    ]
   }
  ],
