--- a/Super_main.ipynb
+++ b/Super_main.ipynb
@@ -5,26 +5,180 @@
    "id": "b561aeae",
    "metadata": {},
    "source": [
-    "All partition of project assembel here for first time! "
+    "# All modules of the project will be integreated here into the main"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f42951",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How to get name of inputs \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2a0771",
+   "id": "b583a6f8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb9f26b4",
+   "metadata": {},
+   "source": [
+    "# Data Frame class\n",
+    "Start Date / End Date / Interval / Time frame and time steps\n",
+    "\n",
+    "Return \n",
+    "\n",
+    "Risk\n",
+    "\n",
+    "Sharpe ratio\n",
+    "\n",
+    "Markowits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "765fd042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stocks \n",
+    "List_stocks = {'AAPL', 'MSFT', 'NVDA', 'GOOGL', 'IBM'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7f9a6246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1826 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start_date, End_date, Interval\n",
+    "import numpy as np\n",
+    "from datetime import date\n",
+    "\n",
+    "# Start date and End date will be replaced\n",
+    "Start_date = np.datetime64(\"2020-11-04\")\n",
+    "End_date = np.datetime64(str(date.today())[:10])\n",
+    "print(End_date - Start_date)\n",
+    "Start_date = str(Start_date)\n",
+    "End_date = str(End_date)\n",
+    "Interval = \"1d\"\n",
+    "# Given the calculation of time diffrence or changing date format is complicated, time frame and time steps calculate base on the count of the data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa203ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  5 of 5 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "data = yf.download(List_stocks, start=Start_date, end=End_date , interval=Interval , auto_adjust=False)\n",
+    "data.head()\n",
+    "\n",
+    "# Adjust close -> tells you what the stock’s price would have been if all historical prices were adjusted so that dividends and splits didn’t change the apparent value of your holdings.\n",
+    "# Returns, Risk, Sharpe_ratio and Markowits will be compute based on Adj Close! \n",
+    "# More price or data can me fetch by user!\n",
+    "\n",
+    "DF = data[\"Adj Close\"]\n",
+    "type(DF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef39b2cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DF_simple_retrun = DF/DF.shift(1)-1\n",
+    "DF_simple_retrun = DF.pct_change()\n",
+    "print(DF_simple_retrun)\n",
+    "DF_log_retrun =  np.log(DF/ DF.shift(1))\n",
+    "DF_log_retrun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "149571bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ticker\n",
+      "AAPL     0.000857\n",
+      "GOOGL    0.001134\n",
+      "IBM      0.001118\n",
+      "MSFT     0.000860\n",
+      "NVDA     0.002698\n",
+      "dtype: float64\n",
+      "Ticker\n",
+      "AAPL     0.017764\n",
+      "GOOGL    0.019399\n",
+      "IBM      0.014903\n",
+      "MSFT     0.016224\n",
+      "NVDA     0.032849\n",
+      "dtype: float64\n",
+      "Ticker\n",
+      "AAPL     0.216047\n",
+      "GOOGL    0.285690\n",
+      "IBM      0.281819\n",
+      "MSFT     0.216616\n",
+      "NVDA     0.679857\n",
+      "dtype: float64\n",
+      "Ticker\n",
+      "AAPL     0.281990\n",
+      "GOOGL    0.307951\n",
+      "IBM      0.236575\n",
+      "MSFT     0.257548\n",
+      "NVDA     0.521462\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "DF_simple_mean = DF_simple_retrun.mean()\n",
+    "DF_simple_volatility = DF_simple_retrun.std()\n",
+    "print(DF_simple_mean)\n",
+    "print(DF_simple_volatility)\n",
+    "\n",
+    "# annual mode should be considered\n",
+    "\n",
+    "#mean_annual = DF_simple_retrun.mean() * 252\n",
+    "#vol_annual = DF_simple_retrun.std() * np.sqrt(252)\n",
+    "#print(mean_annual)\n",
+    "#print(vol_annual)"
+   ]
   }
  ],
  "metadata": {
