creat main: Symbols/Start date/End date

--- a/List_of_Stoks.ipynb
+++ b/List_of_Stoks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "59f67a87",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Projects\\Coding_class_2025-Project\\Symbols_df.py:13: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "d:\\Projects\\Coding_class_2025-Project\\Symbols_df_final.py:39: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
       "\n",
-      "The code that caused this warning is on line 13 of the file d:\\Projects\\Coding_class_2025-Project\\Symbols_df.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "The code that caused this warning is on line 39 of the file d:\\Projects\\Coding_class_2025-Project\\Symbols_df_final.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
       "\n",
       "  soup = BeautifulSoup(page.text, \"html\")\n"
      ]
@@ -225,7 +225,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from Symbols_df import Symbols_df_maker\n",
+    "from SP500_Symbol_checker import Symbols_df_maker\n",
     "try:\n",
     "    df = pd.read_csv(\"Symbols.csv\")\n",
     "except: \n",
