main is polished

--- a/Super_main.ipynb
+++ b/Super_main.ipynb
@@ -11,64 +11,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b583a6f8",
+   "id": "3eef4c49",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb9f26b4",
-   "metadata": {},
-   "source": [
-    "# Data Frame class\n",
-    "\n",
-    "\n",
-    "Return \n",
-    "\n",
-    "Risk\n",
-    "\n",
-    "Sharpe ratio\n",
-    "\n",
-    "Markowits"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f011c11",
-   "metadata": {},
-   "source": [
-    "# Symbols -> check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "aff94faa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pleas enter the symboles of stoks that you want to be under consideration.\n",
-      "\n",
-      "{'NVDA', 'AAPL', 'IBM', 'MSFT', 'GOOGL'}\n"
-     ]
-    }
-   ],
    "source": [
     "import pandas as pd\n",
-    "from Symbols_df import Symbols_df_maker\n",
-    "try:\n",
-    "    df = pd.read_csv(\"Symbols.csv\")\n",
-    "except: \n",
-    "    Symbols_df_maker()\n",
-    "    df = pd.read_csv(\"Symbols.csv\")\n",
-    "    \n",
-    "# Number of symbols 1-500\n",
+    "from SP500_Symbol_checker import SP500_Symbol_checker\n",
     "\n",
-    "# N =: number of stucks\n",
+    "\"\"\" SYMBOLS \"\"\"\n",
+    "# N =: number of\n",
     "\n",
     "N = input(\"pleas enter the number of the stocks:\")\n",
     "while type(N) != int:\n",
@@ -77,63 +28,38 @@
     "    except:\n",
     "        print(\"The entry is not an integer!\")\n",
     "        N = input(\"pleas enter as integer as the number of the stocks:\")\n",
-    "#print(N)\n",
+    "# print(N)\n",
     "\n",
-    "# Creating list \n",
+    "# Creating list\n",
+    "test = input(\n",
+    "    f\"If you want to test the program you can use enter 'test' to a lsit of stocks with {N} element randomly made for you. if not enter'N'.\"\n",
+    ")\n",
+    "if test.lower() == test:\n",
+    "    Set_stocks = SP500_Symbol_checker(None, N).Symbols_random_gen()\n",
+    "else:\n",
+    "    print(\n",
+    "        \"Pleas enter the symboles of stoks that you want to be under consideration.\\n\"\n",
+    "    )\n",
+    "    counter = 0\n",
+    "    Set_stocks = set()\n",
+    "    for i in range(N):\n",
+    "        while True:\n",
+    "            counter += 1\n",
+    "            temp = str(input(f\"pleas enter the {i+1}th symbol:\"))\n",
+    "            if SP500_Symbol_checker(temp, 0).Symbols_check():\n",
+    "                Set_stocks.add(temp.upper())\n",
+    "                break\n",
+    "            else:\n",
+    "                print(f\"{temp.upper()} isn't a valid symbol! Try again.\")\n",
+    "            if counter == 3:\n",
+    "                print(f\"First check your symbols! See you.\")\n",
+    "                break\n",
+    "print(Set_stocks)\n",
     "\n",
-    "print(\"Pleas enter the symboles of stoks that you want to be under consideration.\\n\")\n",
-    "List_stocks = set()\n",
-    "set_symbols = set(df['Symbol'])\n",
-    "counter = 0\n",
-    "for i in range(N):\n",
-    "    while True:\n",
-    "        counter += 1\n",
-    "        temp = str(input(f\"pleas enter the {i+1}th symbol:\"))\n",
-    "        if temp.upper() in set_symbols:\n",
-    "            List_stocks.add(temp.upper())\n",
-    "            break\n",
-    "        else :\n",
-    "            print(f\"{temp.upper()} isn't a valid symbol! Try again.\")\n",
-    "        if counter == 5:\n",
-    "            print(f\"First check your symbols! See you.\")\n",
-    "            break          \n",
-    "print(List_stocks)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df36a071",
-   "metadata": {},
-   "source": [
-    "# Start Date / End Date / Interval / Time frame and time steps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d5806f22",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lowest valid date for NVDA is 1999-01-22 00:00:00-05:00\n",
-      "The lowest valid date for AAPL is 1980-12-12 00:00:00-05:00\n",
-      "The lowest valid date for IBM is 1962-01-02 00:00:00-05:00\n",
-      "The lowest valid date for MSFT is 1986-03-13 00:00:00-05:00\n",
-      "The lowest valid date for GOOGL is 2004-08-19 00:00:00-04:00\n",
-      "[1962, 1, 0]\n",
-      "Note that Format of date is YYYY-MM-DD!, like 2025-11-04\n",
-      "Given the Start data of each stock enter a valid start data!\n",
-      "Given your ticker(s) list the minimum valid date is 2004-8-1.\n",
-      "[2015, 1, 4]\n",
-      "[2025, 1, 4]\n"
-     ]
-    }
-   ],
-   "source": [
+    "\"\"\"Start date/ End date\"\"\"\n",
+    "List_stocks = Set_stocks\n",
     "import yfinance as yf\n",
+    "\n",
     "# lower bound of Start Date\n",
     "min_date = []\n",
     "for ticker in List_stocks:\n",
@@ -142,7 +68,7 @@
     "    print(f\"The lowest valid date for {ticker} is {hist.index.min()}\")\n",
     "    hist = str(hist.index.min())\n",
     "    hist = str(hist[:9])\n",
-    "    min_date.append([int(hist[0:4]),int(hist[5:7]),int(hist[8:])])\n",
+    "    min_date.append([int(hist[0:4]), int(hist[5:7]), int(hist[8:])])\n",
     "print(min(min_date))\n",
     "\n",
     "# S_date End_date\n",
@@ -152,7 +78,7 @@
     "today = str(date.today())\n",
     "print(f\"Note that Format of date is YYYY-MM-DD!, like {today}\")\n",
     "temp = []\n",
-    "temp.append(int(today[0:4])) \n",
+    "temp.append(int(today[0:4]))\n",
     "temp.append(int(today[5:7]))\n",
     "temp.append(int(today[8:]))\n",
     "today = temp[:]\n",
@@ -164,16 +90,19 @@
     "for ticker in List_stocks:\n",
     "    ticker_temp = yf.Ticker(ticker)\n",
     "    hist = ticker_temp.history(period=\"max\")\n",
-    "    #print(f\"The lowest valid date for {ticker} is {hist.index.min()}\")\n",
+    "    # print(f\"The lowest valid date for {ticker} is {hist.index.min()}\")\n",
     "    hist = str(hist.index.min())\n",
     "    hist = str(hist[:9])\n",
-    "    min_dates.append([int(hist[0:4]),int(hist[5:7]),int(hist[8:])])\n",
+    "    min_dates.append([int(hist[0:4]), int(hist[5:7]), int(hist[8:])])\n",
     "\n",
     "max_date = max(min_dates)\n",
-    "print(f\"Given your ticker(s) list the minimum valid date is {max_date[0]}-{max_date[1]}-{max_date[2]}.\")\n",
+    "print(\n",
+    "    f\"Given your ticker(s) list the minimum valid date is {max_date[0]}-{max_date[1]}-{max_date[2]}.\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def data_format_validation(date):\n",
-    "    \n",
+    "\n",
     "    for i in range(len(date)):\n",
     "        if i in [4, 7]:\n",
     "            if date[i] != \"-\":\n",
@@ -183,11 +112,10 @@
     "                int(date[i])\n",
     "            except:\n",
     "                return False\n",
-    "    if int(date[8]+date[9]) > 31 or int(date[5]+date[6]) not in range(0,13):\n",
+    "    if int(date[8] + date[9]) > 31 or int(date[5] + date[6]) not in range(0, 13):\n",
     "        return False\n",
-    "        \n",
-    "    return True\n",
     "\n",
+    "    return True\n",
     "\n",
     "\n",
     "S_date = str(input(f\"Enter Start Date:\"))\n",
@@ -195,38 +123,46 @@
     "\n",
     "if data_format_validation(S_date):\n",
     "    temp = []\n",
-    "    temp.append([int(S_date[0:4]),int(S_date[5:7]),int(S_date[8:])])\n",
+    "    temp.append([int(S_date[0:4]), int(S_date[5:7]), int(S_date[8:])])\n",
     "    S_date = temp[0][:]\n",
     "    print(S_date)\n",
-    "    if S_date < max_date :\n",
-    "        print(f\" Entered data is not in valid range. Start data must be grater than equal {max_date[0]}-{max_date[1]}-{max_date[2]}\")\n",
+    "    if S_date < max_date:\n",
+    "        print(\n",
+    "            f\" Entered data is not in valid range. Start data must be grater than equal {max_date[0]}-{max_date[1]}-{max_date[2]}\"\n",
+    "        )\n",
     "else:\n",
-    "    print('Entered data is not in accepteable format!')    \n",
-    "    \n",
-    "if S_date[1]<10:\n",
-    "    S_date[1] = \"0\"+ str(S_date[1])\n",
-    "if S_date[2]<10:\n",
-    "    S_date[2] = \"0\"+ str(S_date[2])\n",
-    "S_date = str(S_date[0])+ \"-\" + str(S_date[1]) + \"-\" + str(S_date[2])  # date is changed to string\n",
+    "    print(\"Entered data is not in accepteable format!\")\n",
     "\n",
-    "E_date = str(input(f\"Enter End Date:\"))  \n",
+    "if S_date[1] < 10:\n",
+    "    S_date[1] = \"0\" + str(S_date[1])\n",
+    "if S_date[2] < 10:\n",
+    "    S_date[2] = \"0\" + str(S_date[2])\n",
+    "S_date = (\n",
+    "    str(S_date[0]) + \"-\" + str(S_date[1]) + \"-\" + str(S_date[2])\n",
+    ")  # date is changed to string\n",
+    "\n",
+    "E_date = str(input(f\"Enter End Date:\"))\n",
     "\n",
     "if data_format_validation(E_date):\n",
     "    temp = []\n",
-    "    temp.append([int(E_date[0:4]),int(E_date[5:7]),int(E_date[8:])])\n",
+    "    temp.append([int(E_date[0:4]), int(E_date[5:7]), int(E_date[8:])])\n",
     "    E_date = temp[0][:]\n",
     "    print(E_date)\n",
-    "    if E_date > today :\n",
-    "        print(f\" Entered data is not in valid range. Start data must be less than equal {today[0]}-{today[1]}-{today[2]}\")\n",
+    "    if E_date > today:\n",
+    "        print(\n",
+    "            f\" Entered data is not in valid range. Start data must be less than equal {today[0]}-{today[1]}-{today[2]}\"\n",
+    "        )\n",
     "else:\n",
-    "    print('Entered data is not in accepteable format!') \n",
+    "    print(\"Entered data is not in accepteable format!\")\n",
     "\n",
-    "if E_date[1]<10:\n",
-    "    E_date[1] = \"0\"+ str(E_date[1])\n",
-    "if E_date[2]<10:\n",
-    "    E_date[2] = \"0\"+ str(E_date[2]) \n",
+    "if E_date[1] < 10:\n",
+    "    E_date[1] = \"0\" + str(E_date[1])\n",
+    "if E_date[2] < 10:\n",
+    "    E_date[2] = \"0\" + str(E_date[2])\n",
     "\n",
-    "E_date = str(E_date[0])+ \"-\" + str(E_date[1]) + \"-\" + str(E_date[2]) # date is changed to string"
+    "E_date = (\n",
+    "    str(E_date[0]) + \"-\" + str(E_date[1]) + \"-\" + str(E_date[2])\n",
+    ")  # date is changed to string\n"
    ]
   },
   {
